fix(SlideToggle): Fix tick icon alignment within slide toggle

--- a/react/SlideToggle/SlideToggle.less
+++ b/react/SlideToggle/SlideToggle.less
@@ -104,5 +104,6 @@
   fill: white;
   opacity: 0;
   transition: opacity 0.15s;
-  vertical-align: sub;
+  position: relative;
+  top: 4px;
 }
